--- a/Source/Blazorise.Bootstrap5/wwwroot/blazorise.bootstrap5.css
+++ b/Source/Blazorise.Bootstrap5/wwwroot/blazorise.bootstrap5.css
@@ -363,6 +363,17 @@ body:before {
   min-width: 0;
   width: 100%;
 }
+.navbar[data-mode^=vertical] .dropdown-menu .dropdown-item > span[id^=lbl_] > .d-flex.justify-content-between {
+  align-items: center;
+  gap: 0.5rem;
+}
+.navbar[data-mode^=vertical] .dropdown-menu .dropdown-item > span[id^=lbl_] > .d-flex.justify-content-between > :first-child {
+  min-width: 0;
+}
+.navbar[data-mode^=vertical] .dropdown-menu .dropdown-item > span[id^=lbl_] > .d-flex.justify-content-between > :last-child {
+  flex: 0 0 auto;
+  align-self: center;
+}
 .navbar[data-mode^=vertical] .dropdown-menu .dropdown-item i {
   margin-right: 0.3rem;
 }
